Revision history for Perl module OSTypes.

{{$NEXT}}

0.004     2010-05-05 22:04:18 EST5EDT

  - added 'beos' as Unix type

  - fix broken tests on MSWin32
  
  - clean up test output

  - migrate distribution to Dist::Zilla

0.003 Wed Apr 22 13:30:41 EDT 2009

  - fixed test bugs on Perl 5.6

0.002 Tue Apr 21 08:54:55 EDT 2009

  - improved handling of undefined/unknown arguments; improved test
    coverage (JONASBN)

0.001  Sun Apr 19 17:16:18 EDT 2009

  - initial release based on Module::Build and Devel::CheckOS