@@ -1,69 +1,8 @@
-name              = OSType
+name              = Perl-OSType
 author            = David Golden <dagolden@cpan.org>
 license           = Perl_5
 copyright_holder  = David Golden
 
-; -- get a version
-[BumpVersionFromGit]
-version_regexp=^release-(.+)$
-
-; -- fetch & generate files
-[GatherDir]
-[CompileTests]
-fake_home = 1
-; skip = ...
-;[CriticTests]
-[MetaTests]
-[PodSyntaxTests]
-[PodCoverageTests]
-
-; -- remove some files
-[PruneCruft]
-[ManifestSkip]
-
-; -- get prereqs
-[AutoPrereq]
-
-; -- munge files
-[PkgVersion]
-[NextRelease]
-[PodWeaver]
-[Prepender]
-
-; -- dynamic meta-information
-[ExecDir]
-[ShareDir]
-[MetaProvides::Package]
-[Repository]
+[@DAGOLDEN]
 git_remote = github
-
-; -- generate meta files
-[MetaNoIndex]
-directory = t
-directory = xt
-directory = examples
-directory = corpus
-
-[License]
-[MakeMaker]
-[MetaYAML]
-[ReadmeFromPod]
-[Manifest] ; should come last
-
-; -- pre-release
-[TestRelease]
-[CheckExtraTests]
-[Git::Check]
-[ConfirmRelease]
-
-; -- release
-[UploadToCPAN]
-
-; -- post-release
-[Git::Commit]
-[Git::Tag]
-tag_format = release-%v
-[Git::Push]
-push_to = origin
-push_to = github
 
